Mint-XY-Greybird-Blue - Removed fixed sizes for entries inside menus. This was causing me infinite headaches while developing an applet. The fixed width didn't allowed me to use *set_width*. And the fixed height destroyed the entry capability to expand on word wrapping and on multi-line text. - Added LICENSE file.

--- a/Mint-XY-Greybird-Blue/files/Mint-XY-Greybird-Blue/cinnamon/cinnamon.css
+++ b/Mint-XY-Greybird-Blue/files/Mint-XY-Greybird-Blue/cinnamon/cinnamon.css
@@ -191,8 +191,8 @@ StScrollBar StButton#vhandle:hover {
     color: #2b2b2b;
     border-image: url("misc-assets/entry.png") 6;
     border-radius: 4px;
-    width: 250px;
-    height: 16px;
+    min-width: 250px;
+    min-height: 16px;
     selected-color: #fff;
     caret-color: #2b2b2b;
     caret-size: 1px;
@@ -206,8 +206,8 @@ StScrollBar StButton#vhandle:hover {
     color: #2b2b2b;
     border-image: url("misc-assets/entry-focus.png") 6;
     border-radius: 4px;
-    width: 250px;
-    height: 16px;
+    min-width: 250px;
+    min-height: 16px;
     selected-color: #fff;
     caret-color: #2b2b2b;
     caret-size: 1px;
@@ -2163,8 +2163,8 @@ StScrollBar StButton#vhandle:hover {
 .panel-launcher:hover {
     border-image: url("panel-assets/hover-1.svg") 6;
 }
-/* END Left for retro-compatibility */
 
+/* END Left for retro-compatibility */
 .panel-launchers {
     spacing: 0;
 }
